Refactoring and making some plugins get updates synchronously from ASF
Signed-off-by: Ivan St. Ivanov <ivan.st.ivanov@gmail.com>